--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Project</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158670490-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-158670490-1', { 'optimize_id': 'GTM-5R2KB4H' });
+    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -19,46 +29,72 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-	<!-- this is a comment in HTML -->
-	<div class="container">
-		<div class="jumbotron">
-  			<h1>{{title}}</h1>
-  			<p>one-sentence description of project</p>
-		</div>
+    <!-- Google Analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-		{{{summary}}}
+        ga('create', 'UA-158670490-Y', 'auto');
+        ga('require', 'GTM-5R2KB4H');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
+</head>
 
-    <div class="row">
-      <div class="col-md-6">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>User</td>
-              <th>Salient need</td>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Schoolteacher</td>
-              <td>Wants to know what music students are listening to so he can integrate it into his lessons.</td>
-            </tr>
-            <tr>
-              <td>Student 5th grade</td>
-              <td>Desire to be seen as a tastemaker for her friends. Hears about new music from older sister in middle school.</td>
-            </tr>  
-          </tbody>          
-        </table>
-      </div>
-      <div class="col-md-6">
-        <img src="http://lorempixel.com/g/520/150/technics" alt="Lorem Pixel image" class="img">
-      </div>
-    </div>
+<body>
+    <!-- this is a comment in HTML -->
+    <div class="container">
+        <div class="jumbotron">
+            <h1>{{title}}</h1>
+            <p>one-sentence description of project</p>
+        </div>
 
-		<p>Sed vitae ultricies magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce pulvinar sapien eget lacus volutpat suscipit. Duis bibendum condimentum sapien, quis vulputate turpis ultricies sit amet. Quisque sollicitudin vitae ipsum vel scelerisque. Aliquam facilisis eros eros, in ultricies erat aliquam nec. Suspendisse nec egestas arcu. Sed nec malesuada turpis. Proin eu lorem sed mauris bibendum consectetur sit amet mattis arcu. Aliquam porta ligula in nulla ullamcorper, at pulvinar diam porta.</p>
+        {{{summary}}}
 
-    <p><a href="/">Back &raquo;</a></p>
+        <div class="row">
+            <div class="col-md-6">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>User</td>
+                            <th>Salient need</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Schoolteacher</td>
+                            <td>Wants to know what music students are listening to so he can integrate it into his
+                                lessons.</td>
+                        </tr>
+                        <tr>
+                            <td>Student 5th grade</td>
+                            <td>Desire to be seen as a tastemaker for her friends. Hears about new music from older
+                                sister in middle
+                                school.</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-6">
+                <img src="http://lorempixel.com/g/520/150/technics" alt="Lorem Pixel image" class="img">
+            </div>
+        </div>
 
-  </body>
+        <p>Sed vitae ultricies magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+            himenaeos. Fusce pulvinar sapien eget lacus volutpat suscipit. Duis bibendum condimentum sapien, quis
+            vulputate
+            turpis ultricies sit amet. Quisque sollicitudin vitae ipsum vel scelerisque. Aliquam facilisis eros eros, in
+            ultricies erat aliquam nec. Suspendisse nec egestas arcu. Sed nec malesuada turpis. Proin eu lorem sed
+            mauris
+            bibendum consectetur sit amet mattis arcu. Aliquam porta ligula in nulla ullamcorper, at pulvinar diam
+            porta.</p>
+
+        <p><a href="/">Back &raquo;</a></p>
+
+</body>
+
 </html>
